# clecta

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md  words_short.txt
cmake/: config.hh.in
schemes/: default.cfg
scripts/: install_gtest.sh  install_ncurses.sh  prep_gtest.sh
src/: app.cpp  app.hh  clecta.cpp  keys.cpp  keys.hh  match_filter.hh  matcher.cpp  matcher.hh  search.cpp  search.hh  windows.cpp  windows.hh
src/color/: color.cpp  color.hh  parser.cpp  parser.hh
test_data/: words.txt
tests/: CMakeLists.txt  cmdt_matcher_tests.cpp  color_tests.cpp  scheme_parser_tests.cpp  search_tests.cpp  simple_matcher_tests.cpp  test_utils.cpp  test_utils.hh
